# hsfm

./: .gitignore  .gitmodules  .travis.yml  HACKING.md  HSFM-FileSystem-FileType.html  HSFM-FileSystem-UtilTypes.html  HSFM-GUI-Glib-GlibString.html  HSFM-GUI-Gtk-Callbacks-Utils.html  HSFM-GUI-Gtk-Callbacks.html  HSFM-GUI-Gtk-Data.html  HSFM-GUI-Gtk-Dialogs.html  HSFM-GUI-Gtk-Errors.html  HSFM-GUI-Gtk-Icons.html  HSFM-GUI-Gtk-MyGUI.html  HSFM-GUI-Gtk-MyView.html  HSFM-GUI-Gtk-Plugins.html  HSFM-GUI-Gtk-Settings.html  HSFM-GUI-Gtk-Utils.html  HSFM-History.html  HSFM-Settings.html  HSFM-Utils-IO.html  HSFM-Utils-MyPrelude.html  Main.html  Paths_hsfm.html  README.md  cabal.project  cabal.project.freeze  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  (+38 more)
data/Gtk/: builder.xml
hacking/: HACKING.md  hsimport.hs
src/: HSFM-GUI-Glib-GlibString.html  HSFM-GUI-Gtk-Callbacks-Utils.html  HSFM-GUI-Gtk-Callbacks.html  HSFM-GUI-Gtk-Data.html  HSFM-GUI-Gtk-Dialogs.html  HSFM-GUI-Gtk-Errors.html  HSFM-GUI-Gtk-Icons.html  HSFM-GUI-Gtk-MyGUI.html  HSFM-GUI-Gtk-MyView.html  HSFM-GUI-Gtk-Plugins.html  HSFM-GUI-Gtk-Settings.html  HSFM-GUI-Gtk-Utils.html  HSFM-Utils-MyPrelude.html  Main.html  MyPrelude.hs
src/Data/: DirTree.hs
src/Data/DirTree/: Zipper.hs
src/GUI/: Gtk.hs
src/GUI/Gtk/: Callbacks.hs  Callbacks.hs-boot  Data.hs  Dialogs.hs  Gui.hs  Icons.hs  MyGUI.hs  MyView.hs  Utils.hs
src/HSFM/: History.hs  Settings.hs
src/HSFM/FileSystem/: Errors.hs  FileOperations.hs  FileType.hs  UtilTypes.hs
src/HSFM/GUI/: Gtk.hs
src/HSFM/GUI/Glib/: GlibString.hs
src/HSFM/GUI/Gtk/: Callbacks.hs  Callbacks.hs-boot  Data.hs  Dialogs.hs  Errors.hs  Icons.hs  MyGUI.hs  MyView.hs  Plugins.hs  Settings.hs  Utils.hs
src/HSFM/GUI/Gtk/Callbacks/: Utils.hs
src/HSFM/Settings/: Bookmarks.hs
src/HSFM/Utils/: IO.hs  MyPrelude.hs
src/IO/: Error.hs  File.hs  Utils.hs
test/: CopyDirRecursiveSpec.hs  CopyFileSpec.hs  CreateDirSpec.hs  CreateRegularFileSpec.hs  DeleteDirRecursiveSpec.hs  DeleteDirSpec.hs  DeleteFileSpec.hs  GetDirsFilesSpec.hs  GetFileTypeSpec.hs  Main.hs  MoveFileSpec.hs  RecreateSymlinkSpec.hs  RenameFileSpec.hs  Spec.hs  Utils.hs
test/FileSystem/FileOperations/: CopyDirRecursiveOverwriteSpec.hs  CopyDirRecursiveSpec.hs  CopyFileOverwriteSpec.hs  CopyFileSpec.hs  CreateDirSpec.hs  CreateRegularFileSpec.hs  DeleteDirRecursiveSpec.hs  DeleteDirSpec.hs  DeleteFileSpec.hs  GetDirsFilesSpec.hs  GetFileTypeSpec.hs  MoveFileOverwriteSpec.hs  MoveFileSpec.hs  RecreateSymlinkSpec.hs  RenameFileSpec.hs
test/FileSystem/FileOperations/copyDirRecursiveOverwriteSpec/inputDir/bar/: inputFile3
test/FileSystem/FileOperations/copyDirRecursiveOverwriteSpec/noPerms/inputDir/foo/: inputFile1
test/FileSystem/FileOperations/copyDirRecursiveSpec/: wrongInputSymL
test/FileSystem/FileOperations/copyDirRecursiveSpec/inputDir/: inputFile2
test/FileSystem/FileOperations/copyFileOverwriteSpec/: alreadyExists
test/FileSystem/FileOperations/moveFileSpec/: myFile
test/FileSystem/FileOperations/recreateSymlinkSpec/noPerms/: myFile
test/FileSystem/FileOperations/renameFileSpec/: alreadyExists
test/copyFileSpec/: inputFileSymL
test/getFileTypeSpec/: symlink
test/moveFileSpec/: alreadyExists
test/recreateSymlinkSpec/: myFileL
