name:                hsfm
version:             0.0.0.1
synopsis:            Haskell FileManager
description:         FileManager written in haskell
license:             GPL-2
license-file:        LICENSE
author:              Julian Ospald
maintainer:          hasufell@hasufell.de
copyright:           Copyright: (c) 2015 Julian Ospald
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10

data-files:          data/Gtk/builder.xml
                     data/Gtk/icons/error.png
                     data/Gtk/icons/gtk-directory.png
                     data/Gtk/icons/gtk-file.png


library
  exposed-modules:     Data.DirTree
                       IO.Utils
                       IO.File
                       IO.Error
                       MyPrelude

  build-depends:       base >= 4.7,
                       data-default,
                       bifunctors >= 5,
                       containers,
                       directory >= 1.1.0.0 && < 1.2.3.0,
                       filepath >= 1.3.0.0,
                       mtl >= 2.2,
                       old-locale >= 1,
                       process,
                       safe,
                       stm,
                       time >= 1.4.2,
                       unix
  hs-source-dirs:      src
  default-language:    Haskell2010
  Default-Extensions:  RecordWildCards
                       PatternSynonyms
                       FlexibleInstances
                       ViewPatterns
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"

executable hsfm-gtk
  main-is:             GUI/Gtk.hs
  other-modules:       GUI.Gtk.Callbacks
                       GUI.Gtk.Data
                       GUI.Gtk.Dialogs
                       GUI.Gtk.Icons
                       GUI.Gtk.Utils
                       MyPrelude

  build-depends:       hsfm,
                       base >= 4.7,
                       containers,
                       data-default,
                       gtk3 >= 0.14.1,
                       glib >= 0.13,
                       bifunctors >= 5,
                       directory >= 1.1.0.0 && < 1.2.3.0,
                       filepath >= 1.3.0.0,
                       mtl >= 2.2,
                       old-locale >= 1,
                       process,
                       safe,
                       stm,
                       time >= 1.4.2,
                       transformers,
                       unix
  hs-source-dirs:      src
  default-language:    Haskell2010
  Default-Extensions:  RecordWildCards
                       PatternSynonyms
                       FlexibleInstances
                       ViewPatterns
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
