name:                hsfm
version:             0.0.0.1
synopsis:            Haskell FileManager
description:         FileManager written in haskell
license:             GPL-2
license-file:        LICENSE
author:              Julian Ospald
maintainer:          hasufell@hasufell.de
copyright:           Copyright: (c) 2016 Julian Ospald
homepage:            https://github.com/hasufell/hsfm
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10

data-files:
                     LICENSE
                     data/Gtk/builder.xml
                     data/Gtk/icons/error.png
                     data/Gtk/icons/gtk-directory.png
                     data/Gtk/icons/gtk-file.png
                     data/Gtk/icons/hsfm.png
                     hsfm.cabal


library
  exposed-modules:
                       HSFM.FileSystem.Errors
                       HSFM.FileSystem.FileOperations
                       HSFM.FileSystem.FileType
                       HSFM.FileSystem.UtilTypes
                       HSFM.Utils.IO
                       HSFM.Utils.MyPrelude

  build-depends:
                       base >= 4.7,
                       bytestring,
                       containers,
                       data-default,
                       filepath >= 1.3.0.0,
                       hinotify-bytestring,
                       hpath,
                       mtl >= 2.2,
                       old-locale >= 1,
                       posix-paths,
                       process,
                       safe,
                       simple-sendfile,
                       stm,
                       time >= 1.4.2,
                       unix,
                       unix-bytestring,
                       utf8-string
  hs-source-dirs:      src
  default-language:    Haskell2010
  Default-Extensions:  RecordWildCards
                       PatternSynonyms
                       FlexibleInstances
                       ViewPatterns
  ghc-options:
    -O2
    -threaded
    -Wall
    "-with-rtsopts=-N"

executable hsfm-gtk
  main-is:             HSFM/GUI/Gtk.hs
  other-modules:
                       HSFM.GUI.Glib.GlibString
                       HSFM.GUI.Gtk.Callbacks
                       HSFM.GUI.Gtk.Callbacks.Utils
                       HSFM.GUI.Gtk.Data
                       HSFM.GUI.Gtk.Dialogs
                       HSFM.GUI.Gtk.Errors
                       HSFM.GUI.Gtk.Icons
                       HSFM.GUI.Gtk.MyGUI
                       HSFM.GUI.Gtk.MyView
                       HSFM.GUI.Gtk.Utils
                       HSFM.Utils.MyPrelude

  build-depends:
                       Cabal >= 1.22.0.0,
                       base >= 4.7,
                       bytestring,
                       containers,
                       data-default,
                       filepath >= 1.3.0.0,
                       glib >= 0.13,
                       gtk3 >= 0.14.1,
                       hinotify-bytestring,
                       hpath,
                       hsfm,
                       mtl >= 2.2,
                       old-locale >= 1,
                       posix-paths,
                       process,
                       safe,
                       simple-sendfile,
                       stm,
                       time >= 1.4.2,
                       transformers,
                       unix,
                       unix-bytestring,
                       utf8-string,
                       word8
  hs-source-dirs:      src
  default-language:    Haskell2010
  Default-Extensions:  RecordWildCards
                       PatternSynonyms
                       FlexibleInstances
                       ViewPatterns
  ghc-options:
    -O2
    -threaded
    -Wall
    "-with-rtsopts=-N"


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Main-Is:              Main.hs
  other-modules:
                        Spec
                        FileSystem.FileOperations.CopyDirRecursiveSpec
                        FileSystem.FileOperations.CopyDirRecursiveOverwriteSpec
                        FileSystem.FileOperations.CopyFileSpec
                        FileSystem.FileOperations.CopyFileOverwriteSpec
                        FileSystem.FileOperations.CreateDirSpec
                        FileSystem.FileOperations.CreateRegularFileSpec
                        FileSystem.FileOperations.DeleteDirRecursiveSpec
                        FileSystem.FileOperations.DeleteDirSpec
                        FileSystem.FileOperations.DeleteFileSpec
                        FileSystem.FileOperations.GetDirsFilesSpec
                        FileSystem.FileOperations.GetFileTypeSpec
                        FileSystem.FileOperations.MoveFileSpec
                        FileSystem.FileOperations.MoveFileOverwriteSpec
                        FileSystem.FileOperations.RecreateSymlinkSpec
                        FileSystem.FileOperations.RenameFileSpec
                        Utils
  GHC-Options:          -Wall
  Build-Depends:        base
                      , HUnit
                      , bytestring
                      , hpath
                      , hsfm
                      , hspec >= 1.3
                      , process
                      , unix
                      , utf8-string
