name:                hsfm
version:             0.0.0.1
synopsis:            Haskell FileManager
description:         FileManager written in haskell
license:             GPL-2
license-file:        LICENSE
author:              Julian Ospald
maintainer:          hasufell@hasufell.de
copyright:           Copyright: (c) 2016 Julian Ospald
homepage:            https://github.com/hasufell/hsfm
category:            Desktop
build-type:          Simple
cabal-version:       >=1.22

data-files:
                     LICENSE
                     data/Gtk/builder.xml
                     data/Gtk/icons/error.png
                     data/Gtk/icons/gtk-directory.png
                     data/Gtk/icons/gtk-file.png
                     data/Gtk/icons/hsfm.png
                     hsfm.cabal


library
  exposed-modules:
                       HSFM.FileSystem.FileType
                       HSFM.FileSystem.UtilTypes
                       HSFM.History
                       HSFM.Settings
                       HSFM.Utils.IO
                       HSFM.Utils.MyPrelude

  build-depends:
                       base >= 4.8 && < 5,
                       bytestring,
                       filepath >= 1.3.0.0,
                       hinotify-bytestring,
                       hpath >= 0.8.0,
                       safe,
                       stm,
                       time >= 1.4.2,
                       unix,
                       utf8-string
  hs-source-dirs:      src
  default-language:    Haskell2010
  Default-Extensions:  RecordWildCards
                       PatternSynonyms
                       FlexibleInstances
                       ViewPatterns
  ghc-options:
    -Wall

executable hsfm-gtk
  main-is:             HSFM/GUI/Gtk.hs
  other-modules:
                       Paths_hsfm
                       HSFM.FileSystem.FileType
                       HSFM.FileSystem.UtilTypes
                       HSFM.GUI.Glib.GlibString
                       HSFM.GUI.Gtk.Callbacks
                       HSFM.GUI.Gtk.Callbacks.Utils
                       HSFM.GUI.Gtk.Data
                       HSFM.GUI.Gtk.Dialogs
                       HSFM.GUI.Gtk.Errors
                       HSFM.GUI.Gtk.Icons
                       HSFM.GUI.Gtk.MyGUI
                       HSFM.GUI.Gtk.MyView
                       HSFM.GUI.Gtk.Plugins
                       HSFM.GUI.Gtk.Settings
                       HSFM.GUI.Gtk.Utils
                       HSFM.History
                       HSFM.Settings
                       HSFM.Utils.IO
                       HSFM.Utils.MyPrelude

  build-depends:
                       Cabal >= 1.22.0.0,
                       base >= 4.8 && < 5,
                       bytestring,
                       filepath >= 1.3.0.0,
                       glib >= 0.13,
                       gtk3 >= 0.14.1,
                       hinotify-bytestring,
                       hpath >= 0.8.0,
                       hsfm,
                       monad-loops,
                       old-locale >= 1,
                       process,
                       safe,
                       simple-sendfile,
                       stm,
                       time >= 1.4.2,
                       transformers,
                       unix,
                       unix-bytestring,
                       utf8-string,
                       word8
  hs-source-dirs:      src
  default-language:    Haskell2010
  Default-Extensions:  RecordWildCards
                       PatternSynonyms
                       FlexibleInstances
                       ViewPatterns
  ghc-options:
    -Wall

source-repository head
  type:     git
  location: https://github.com/hasufell/hsfm

